docs/0.12/_sources/api/gammapy.spectrum.FluxPointsDataset.rst.txt
FluxPointsDataset
=================

.. currentmodule:: gammapy.spectrum

.. autoclass:: FluxPointsDataset
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~FluxPointsDataset.mask

   .. rubric:: Methods Summary

   .. autosummary::

      ~FluxPointsDataset.copy
      ~FluxPointsDataset.data_shape
      ~FluxPointsDataset.flux_pred
      ~FluxPointsDataset.likelihood
      ~FluxPointsDataset.likelihood_per_bin
      ~FluxPointsDataset.peek
      ~FluxPointsDataset.plot_residuals
      ~FluxPointsDataset.plot_spectrum
      ~FluxPointsDataset.residuals

   .. rubric:: Attributes Documentation

   .. autoattribute:: mask

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: data_shape
   .. automethod:: flux_pred
   .. automethod:: likelihood
   .. automethod:: likelihood_per_bin
   .. automethod:: peek
   .. automethod:: plot_residuals
   .. automethod:: plot_spectrum
   .. automethod:: residuals
