docs/0.15/_sources/api/gammapy.spectrum.FluxPointsDataset.rst.txt
FluxPointsDataset
=================

.. currentmodule:: gammapy.spectrum

.. autoclass:: FluxPointsDataset
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~FluxPointsDataset.likelihood_type
      ~FluxPointsDataset.mask
      ~FluxPointsDataset.models
      ~FluxPointsDataset.parameters
      ~FluxPointsDataset.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~FluxPointsDataset.copy
      ~FluxPointsDataset.data_shape
      ~FluxPointsDataset.flux_pred
      ~FluxPointsDataset.from_dict
      ~FluxPointsDataset.peek
      ~FluxPointsDataset.plot_residuals
      ~FluxPointsDataset.plot_spectrum
      ~FluxPointsDataset.residuals
      ~FluxPointsDataset.stat_array
      ~FluxPointsDataset.stat_sum
      ~FluxPointsDataset.to_dict
      ~FluxPointsDataset.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: likelihood_type
   .. autoattribute:: mask
   .. autoattribute:: models
   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: data_shape
   .. automethod:: flux_pred
   .. automethod:: from_dict
   .. automethod:: peek
   .. automethod:: plot_residuals
   .. automethod:: plot_spectrum
   .. automethod:: residuals
   .. automethod:: stat_array
   .. automethod:: stat_sum
   .. automethod:: to_dict
   .. automethod:: write
